# Spock

./: README.md  notes.txt
benchmarking/: code_count.py  o_metric.py
code/: ABI.md  Makefile  boot.s  const.h  delete.c  delete.h  dev.txt  enclave.h  enclave1.s  enclave2.s  enclave_old.txt  getters.c  getters.h  lib.c  lib.h  linker.ld  main.c  memory.c  memory.h  pmp.s  set_pmp.s  shared_lib.h  shared_mem_lib.c  shared_mem_lib.h  sm.c  sm.h  temp.txt  types.h  untrusted_boot.s  untrusted_lib.c  untrusted_lib.h  untrusted_sm_calls.s
design/: Diagram zonder titel.drawio  PMP-virtualization.odg
tryout/: mem  mem.c
tryout/hacl-star-test/test/: CMakeLists.txt  main.cpp
